# lab64

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  ROADMAP.md  factory.md  pyproject.toml  spec.md
.github/workflows/: test.yml
assets/characters/: README.md
assets/characters/black-cat/: README.md
assets/characters/dalmatian/: README.md
assets/characters/orange-cat/: README.md
assets/characters/yellow-lab/: README.md
docs/: character-design-guide.md  controller-testing.md  gate-1-checklist.md  legal-boundaries.md  modding-notes.md  setup.md  slot-assignments.md
eval/: score.py
mods/animal-pack/: mods.toml
references/: README.md
test/: test_check_feasibility.bats  test_eval_score.py  test_lab64_cli.bats  test_pack_character_mod.bats  test_render_character_sprites.py  test_sync_to_windows.bats  test_validate_mod.bats
test/fixtures/valid-mod/: mods.toml
tools/: README.md  check-feasibility.sh  lab64  pack-character-mod.sh  render-character-sprites.py  sync-to-windows.sh  validate-mod.sh
tools/lib/: logging.sh
