[project]
name = "lab64"
version = "0.1.0"
description = "SpaghettiKart character mod toolchain"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"

[tool.mypy]
strict = true
python_version = "3.10"

[[tool.mypy.overrides]]
module = "test.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["bpy", "mathutils"]
ignore_missing_imports = true
