[project]
name = "lab64"
version = "0.1.0"
description = "SpaghettiKart character mod toolchain"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"

[tool.mypy]
strict = true
python_version = "3.10"

# Tests are excluded from mypy by design (typecheck target runs `mypy tools/ eval/` only)

[[tool.mypy.overrides]]
module = ["bpy", "mathutils"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["tools", "eval"]
omit = ["test/*", "test/**"]

[tool.coverage.report]
show_missing = true
fail_under = 20
